@@ -1,4 +1,6 @@
 #!/bin/bash
 
+source ../../../etc/extrae.sh
+
 ./check_Extrae_getcaller_depth2
 exit $?
